add user creation controller